# upper

./: README.md  pyproject.toml
.github/: dependabot.yml
upper/: __init__.py  __main__.py  logger.py
